[gd_scene load_steps=50 format=3 uid="uid://g3qon86c7try"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_nkb36"]
[ext_resource type="Texture2D" uid="uid://bh1h6atuc7cbs" path="res://assets/mystic_woods/characters/slime.png" id="2_8bhsi"]
[ext_resource type="Texture2D" uid="uid://julbulhtyo4p" path="res://assets/lightning/Lightning_1_512-sheet.png" id="3_ecar2"]
[ext_resource type="PackedScene" uid="uid://c2ruf735lsivq" path="res://scenes/healthbar.tscn" id="4_spty4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_52ny6"]
atlas = ExtResource("2_8bhsi")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_paotb"]
atlas = ExtResource("2_8bhsi")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tuic"]
atlas = ExtResource("2_8bhsi")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1u0h"]
atlas = ExtResource("2_8bhsi")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v6sd"]
atlas = ExtResource("2_8bhsi")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcfmo"]
atlas = ExtResource("2_8bhsi")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc171"]
atlas = ExtResource("2_8bhsi")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uufeq"]
atlas = ExtResource("2_8bhsi")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eesct"]
atlas = ExtResource("2_8bhsi")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_547bk"]
atlas = ExtResource("2_8bhsi")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa7jd"]
atlas = ExtResource("2_8bhsi")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u44rp"]
atlas = ExtResource("2_8bhsi")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chp62"]
atlas = ExtResource("2_8bhsi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_howxg"]
atlas = ExtResource("2_8bhsi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu4d3"]
atlas = ExtResource("2_8bhsi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plsp2"]
atlas = ExtResource("2_8bhsi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqg8b"]
atlas = ExtResource("2_8bhsi")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1oqm"]
atlas = ExtResource("2_8bhsi")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b15er"]
atlas = ExtResource("2_8bhsi")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owlrn"]
atlas = ExtResource("2_8bhsi")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v66hn"]
atlas = ExtResource("2_8bhsi")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42c1t"]
atlas = ExtResource("2_8bhsi")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6of8n"]
atlas = ExtResource("2_8bhsi")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk8em"]
atlas = ExtResource("2_8bhsi")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq3gy"]
atlas = ExtResource("2_8bhsi")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_312st"]
atlas = ExtResource("2_8bhsi")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyt2k"]
atlas = ExtResource("2_8bhsi")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8khg"]
atlas = ExtResource("2_8bhsi")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypb82"]
atlas = ExtResource("2_8bhsi")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqgop"]
atlas = ExtResource("2_8bhsi")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5t4ds"]
atlas = ExtResource("2_8bhsi")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0h3j"]
atlas = ExtResource("2_8bhsi")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxii5"]
atlas = ExtResource("2_8bhsi")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cphxg"]
atlas = ExtResource("2_8bhsi")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxmvk"]
atlas = ExtResource("2_8bhsi")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki4y7"]
atlas = ExtResource("2_8bhsi")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70gmt"]
atlas = ExtResource("2_8bhsi")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uwki"]
atlas = ExtResource("2_8bhsi")
region = Rect2(0, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ekba"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ny6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_paotb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tuic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1u0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v6sd")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcfmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc171")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uufeq")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eesct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_547bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa7jd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u44rp")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chp62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_howxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu4d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plsp2")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqg8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1oqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b15er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owlrn")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v66hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42c1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6of8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk8em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq3gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_312st")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyt2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8khg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypb82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqgop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5t4ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0h3j")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 0.01,
"texture": SubResource("AtlasTexture_rxii5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cphxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxmvk")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_ki4y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70gmt")
}, {
"duration": 0.01,
"texture": SubResource("AtlasTexture_7uwki")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3gp5o"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jybsy"]
radius = 90.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d8s3y"]
radius = 8.0

[sub_resource type="Animation" id="Animation_ejnoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1vrml"]
resource_name = "default"
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_02iuy"]
_data = {
"RESET": SubResource("Animation_ejnoc"),
"default": SubResource("Animation_1vrml")
}

[node name="slime" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16
collision_mask = 19
motion_mode = 1
wall_min_slide_angle = 0.0
platform_on_leave = 2
script = ExtResource("1_nkb36")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_2ekba")
animation = &"hurt"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_3gp5o")

[node name="detection_area" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_jybsy")
debug_color = Color(0.423529, 0, 0.666667, 0.0156863)

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_d8s3y")
debug_color = Color(0.717647, 0, 0, 0.419608)

[node name="damage_label" type="Marker2D" parent="."]
visible = false
position = Vector2(-4, -24)

[node name="shock_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="lightning" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.980392, 0.901961, 0.388235, 1)
position = Vector2(0, -25)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_ecar2")
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="lightning"]
libraries = {
"": SubResource("AnimationLibrary_02iuy")
}
speed_scale = 2.0

[node name="healthbar" parent="." instance=ExtResource("4_spty4")]
z_index = 2
offset_left = -16.0
offset_top = -17.0
offset_right = 48.0
offset_bottom = -12.0
scale = Vector2(0.5, 0.5)

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
